/* დიქტატირები სულა და მარიუსი */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -126,7 +126,7 @@
 გრაქჰების მოძრაობის ჩახშობის მერე რომში ფართოდ გაიშალა [[ოპტიმატები|ოპტიმატების]] (მდიდარი მიწათმფლობელების) და [[პოპულარები|პოპულარების]] (პლებსის მომხრეების) ბრძოლა. არცერთ პარტიას არ ჰქონდა არც კონკრეტული პროგრამა არც მუდმივი ხელმძღვანელები, ხშირად ხდებოდა ერთი პარტიიდან მეორეს მხარეს გადასვლა, ეს განპირობებული იყო [[კლიენტურა|კლიენტურის]] ინსტიტურით და პირადი ნაცნობობით.
 
 [[სურათი:Marius.jpg|thumb|გაიუს მარიუსი]]
-===დიქტატირები სულა და მარიუსი===
+===დიქტატირი სულა და მარიუსი===
 
 ორ პარტიას შორის დაპირისპირების გამწვავება გამოიწვია აფრიკაში განვითარებულმა მოვლენებმაც. კართაგენის ყოფილ ტერიტორიაზე დასახლებულ რომაელ კოლონისტებსა და მეზობელ ნუმიდიელებს შორის მოხდა შეიარაღებული კონფლიქტი. ძვ. წ. 112 წელს პოპულარებმა აიძულეს სენატი, რათა გამოეცხადებინა ომი ნუმიდიის მეფისთვის იუგურტასთვის. ამ ომში თავი გამოიჩინა ახალგაზრდა და ნიჭიერმა მხედართმთავარმა [[მარიუსი, გაიუს|გაიუს მარიუსმა]]. ძვ. წ. 105 წელს, იუგურტას დამარცხების შემდეგ კი მისი პოპულარობა საგრძნობლად გაიზარდა. ძვ. წ. 107 წელს იგი აირჩიეს კონსულად. მარიუსმა ჩაატარა სამხედრო რეფორმა, რომელმაც რომის შემდგომ ისტორიაზე ძლიერი გავლენა იქონია.
 
