/* დიქტატირი სულა და მარიუსი */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -128,7 +128,7 @@
 [[სურათი:Marius.jpg|thumb|გაიუს მარიუსი]]
 ===დიქტატირი სულა და მარიუსი===
 
-ორ პარტიას შორის დაპირისპირების გამწვავება გამოიწვია აფრიკაში განვითარებულმა მოვლენებმაც. კართაგენის ყოფილ ტერიტორიაზე დასახლებულ რომაელ კოლონისტებსა და მეზობელ ნუმიდიელებს შორის მოხდა შეიარაღებული კონფლიქტი. ძვ. წ. 112 წელს პოპულარებმა აიძულეს სენატი, რათა გამოეცხადებინა ომი ნუმიდიის მეფისთვის იუგურტასთვის. ამ ომში თავი გამოიჩინა ახალგაზრდა და ნიჭიერმა მხედართმთავარმა [[მარიუსი, გაიუს|გაიუს მარიუსმა]]. ძვ. წ. 105 წელს, იუგურტას დამარცხების შემდეგ კი მისი პოპულარობა საგრძნობლად გაიზარდა. ძვ. წ. 107 წელს იგი აირჩიეს კონსულად. მარიუსმა ჩაატარა სამხედრო რეფორმა, რომელმაც რომის შემდგომ ისტორიაზე ძლიერი გავლენა იქონია.
+ორ პარტიას შორის დაპირისპირების გამწვავება გამოიწვია აფრიკაში განვითარებულმა მოვლენებმაც. კართაგენის ყოფილ ტერიტორიაზე დასახლებულ რომაელ კოლონისტებსა და მეზობელ ნუმიდიელებს შორის მოხდა შეიარაღებული კონფლიქტი. ძვ. წ. 112 წელს პოპულარებმა აიძულეს სენატი, რათა გამოეცხადებინა ომი ნუმიდიის მეფისთვის იუგურტასთვის. ამ ომში თავი გამოიჩინა ახალგაზრდა და ნიჭიერმა მხედართმთავარმა [[გაიუს მარიუსი|გაიუს მარიუსმა]]. ძვ. წ. 105 წელს, იუგურტას დამარცხების შემდეგ კი მისი პოპულარობა საგრძნობლად გაიზარდა. ძვ. წ. 107 წელს იგი აირჩიეს კონსულად. მარიუსმა ჩაატარა სამხედრო რეფორმა, რომელმაც რომის შემდგომ ისტორიაზე ძლიერი გავლენა იქონია.
 
 ამ რეფორმის თანახმად ჯარში შეეძლო წეასვლა ნებისმიერ ბრძოლისუნარიან მამაკაცს. მათ 16 წელი უნდა ემსახურად, რის შემდეგაც ყოველი ვეტერანი მიიღებდა მიწას. ამავე დროს მარიუსი ჯარისკაცებს დაპირდა ომებში მოპოვებული ნადავლის განაწილებას. ამით მრავალი გაღატაკებული რომაელი მოიხიბლა. მარიუსის არმიამ თავი გერმანულ ტომებთან ომში წარმატებით გამოიჩინა. 
 
