--- a/გაიუს_მარიუსი.mw
+++ b/გაიუს_მარიუსი.mw
@@ -1,3 +1,4 @@
+[[სურათი:Marius.jpg|thumb|გაიუს მარიუსი]]
 '''გაიუს მარიუსი''' (''[[ლათინური ენა|ლათ]].  '''C·MARIVS·C·F·C·N''''') ([[ძვ. წ. 157]] - [[ძვ. წ. 86]] [[18 იანვარი]]) [[რომის რესპუბლიკა|რომაელი]] გენერალი და შვიდგზის [[კონსული]]. იგი რომის [[მარიუსის სამხედრო რეფორმა|სამხედრო რეფორმის]] ავტორი იყო.
 
 {{ესკიზი}}
