/* დიქტატირი სულა და მარიუსი */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -138,7 +138,7 @@
 მარიუსის ვეტერანებმა მიიღეს მიწები, მაგრამ შემდეგ რეაქციულმა ძალებმა ისევ იმარჯვეს და მარიუსს მოუწია რომიდან წასვლა. ამასთან ერთად წამოიჭრა ახალი პრობლემა, მდიდარ იტალიკებს სურდათ რომის მოქალაქეობის მიღება. 91 წელს სახალხო ტრიბუნმა [[ლივიუს დრუზი|ლივიუს დრუზმა]] სცადა კამოეცა მათ მხარდასაჭერად კანონი, რათა აღედგინა ძლიერი რესპუბლიკა ძლიერი მიწათმფლობლებით და მრავალრიცხოვანი გლეხობით, მთელი იტალიის მოსახლეობა შეიკრიბა ამ კანონის მხარდასაჭერად, მაგრამ სენატორებმა მოაკვლევინეს დრუზი, რითიც იტალიკების განრისხება გამოიწვიეს. 90 წელს დაიწყო აჯანყება, რომელიც ისტორიაში "[[მოკავშირეთა ომი|მოკავშირეთა ომის]]" სახელწოდებით შევიდა. რომისთვის ეს მძიმე დარტყმა იყო, რადგან ლეგიონების დიდ ნაწილს იტალიკები შეადგენდნენ. სენატს მოუწია დათმობაზე წასვლა, 90 წლის ბოლო გამოიცა კანონი, რომლის მიხედვითაც იტალიკები, რომლებმაც რომის ერთგულება შეინარჩუნეს ხდებოდნენ რომის მოქალაქეები. 88 წელს კი გამოიცა კანონი რომლითაც ყველა იტალიკი ვინც განიარაღდებოდა მიიღებდა მოქალაქეობას. 
 
 [[სურათი:Sulla.png|thumb|დიქტატორი სულა]]
-რომაელებმა მოახერხეს აჯანყების ჩახშობა, მაგრამ მათ მოუწიათ იტალიკების მოთხოვნების დაკმაყოფილება. ახალი მოქალაქეებისგან შეადგინეს 10 ახალი ტრიბი. ახალი დაპირისპირების საბაბი გარდა ის თუ ვინ უნდა ეხელმძღვანელა პონტოსთან დაწყებულ ომში. მარიუსმა მოიპოვა ახალი ტრიბების და პლებსის მხარდაჭერა, მაგრამ [[ლუციუს კორნელიუს სულა ფელიქს|ლუციუს კორნელიუს სულამ]] ალყა შემოარტყა რომს და სენატი აიძულა მისთვის დაეთმოთ ამ ომში მხედართმთავრობა. სულამ სენატს ახალი კანონები შემოაღებინა, რომლის მიხედვითაც სახალხო კრების და ტრიბუნების ძალაუფლება ძალიან შემცირდა. 88 წელს კონსულების არჩევნებზე სულას მცდელობების მიუხედავად, მასთან ერთად გაიმარჯვა [[ლუციუს კორნელიუს ცინა|ლუციუს კორნელიუს ცინამ]], რომელიც მარიუსის მომხრე იყო. 
+რომაელებმა მოახერხეს აჯანყების ჩახშობა, მაგრამ მათ მოუწიათ იტალიკების მოთხოვნების დაკმაყოფილება. ახალი მოქალაქეებისგან შეადგინეს 10 ახალი ტრიბი. ახალი დაპირისპირების საბაბი გარდა ის თუ ვინ უნდა ეხელმძღვანელა პონტოსთან დაწყებულ ომში. მარიუსმა მოიპოვა ახალი ტრიბების და პლებსის მხარდაჭერა, მაგრამ [[სულა|ლუციუს კორნელიუს სულამ]] ალყა შემოარტყა რომს და სენატი აიძულა მისთვის დაეთმოთ ამ ომში მხედართმთავრობა. სულამ სენატს ახალი კანონები შემოაღებინა, რომლის მიხედვითაც სახალხო კრების და ტრიბუნების ძალაუფლება ძალიან შემცირდა. 88 წელს კონსულების არჩევნებზე სულას მცდელობების მიუხედავად, მასთან ერთად გაიმარჯვა [[ლუციუს კორნელიუს ცინა|ლუციუს კორნელიუს ცინამ]], რომელიც მარიუსის მომხრე იყო. 
 
 ამის შემდეგ სულა გაემგზავრა პონტოელებთან საომრად, რადგან გაძლიერებულმა პონტოს სამეფომ დაიწყო მცირე აზიასი და ელადაში რომაული ქალაქების დაპყრობა. მარიუსი კვლავ დაბრუნდა რომში, მან და ცინამ განაგრძეს რეფორმების განხორციელება. მათ მხარი არა მარტო გაღარიბებულმა მოსახლეობამ დაუჭირა, არამედ მონებმაც. რომში მონები აჯანყდნენ და მარიუსს შეუერთდნენ, სენატმა ამის შეჩერება ვერანაერად ვერ შეძლო. მარიუსმა დაიწყო თავისი მოწინააღმდეგეების სასტიკი დევნა, მაგრამ მარიუსი ამ მოვლენების შემდეგ მალე მოკვდა, მალე კი ცინაც მოკლეს აჯანყებულმა ჯარისკაცებმა.
 
