*Empty MediaWiki Message*

--- a/ნეპალი.mw
+++ b/ნეპალი.mw
@@ -75,3 +75,65 @@
 საგარმათას ეროვნული პარკი, კატმანდუს ხეობა, ჩიტვანის სამეფო პარკი, ლუმბინი (ბუდას დაბადების ადგილი). 
 
 [[კატეგორია:აზიის ქვეყნები]]
+
+
+
+[[an:Nepal]]
+[[ar:نيبال]]
+[[bg:Непал]]
+[[bn:নেপাল]]
+[[ca:Nepal]]
+[[cs:Nepál]]
+[[da:Nepal]]
+[[de:Nepal]]
+[[dv:ނޭޕާލް]]
+[[el:Νεπάλ]]
+[[en:Nepal]]
+[[eo:Nepalo]]
+[[es:Nepal]]
+[[et:Nepal]]
+[[eu:Nepal]]
+[[fa:نپال]]
+[[fi:Nepal]]
+[[fr:Népal]]
+[[gd:Nepal]]
+[[gl:Nepal - नेपाल अधिराज्य]]
+[[he:נפאל]]
+[[hi:नेपाल]]
+[[hr:Nepal]]
+[[ht:Nepal]]
+[[hu:Nepál]]
+[[id:Nepal]]
+[[io:Nepal]]
+[[is:Nepal]]
+[[it:Nepal]]
+[[ja:ネパール]]
+[[ko:네팔]]
+[[ks:नेपाल]]
+[[ku:Nepal]]
+[[li:Nepal]]
+[[lt:Nepalas]]
+[[ms:Nepal]]
+[[nds:Nepal]]
+[[ne:नेपाल]]
+[[nl:Nepal]]
+[[nn:Nepal]]
+[[no:Nepal]]
+[[os:Непал]]
+[[pl:Nepal]]
+[[pt:Nepal]]
+[[ro:Nepal]]
+[[ru:Непал]]
+[[sa:नेपाल]]
+[[simple:Nepal]]
+[[sk:Nepál]]
+[[sl:Nepal]]
+[[sq:Nepali]]
+[[sv:Nepal]]
+[[ta:நேபாளம்]]
+[[th:ประเทศเนปาล]]
+[[tl:Nepal]]
+[[tr:Nepal]]
+[[uk:Непал]]
+[[zh:尼泊尔]]
+[[zh-min-nan:Nepal]]
