*Empty MediaWiki Message*

--- a/ჰერეთი.mw
+++ b/ჰერეთი.mw
@@ -1,6 +1,6 @@
 '''ჰერეთი''' აღმოსავლეთ [[საქართველო|საქართველოს]] ისტორიულ-გეოგრაფიული მხარეა. წყაროებში პირველად [[V]] საუკუნეში მოიხსენიება. უძველეს ხანაში [[ალბანეთი (კავკასია)|კავკასიის ალბანეთის]] სამეფოში შედიოდა. ([[X]])-[[XIV]] საუკუნეების წყაროების მიხედვით მოიცავდა გვიანდელი ხანის [[შიგნიკახეთი|შიგნიკახეთისა]] და [[გაღმამხარი (კახეთი)|გაღმამხრის]] ტერიტორიას (მდ. [[ალაზნის ველი]]) [[საინგილო|საინგილოს]] ჩათვლით. [[XII]] ს-ში ამ ტერიტორიაზე ჩამოყალიბდა საქართველოს ფეოდალური მონარქიის ერთ-ერთი ადმინისტრაციულ-პოლიტიკური ერთეული - [[ჰერეთის საერისთავო]], რომელიც [[დაღესტანი|დაღესტნის]] მოსაზღვრე მთიანეთსაც მოიცავდა.  XI საუკუნის ზოგიერთი წყაროს მიხედვით , ჰერეთი მოიცავდა [[კამბეჩოვანი|კამბეჩოვანსაც]] და სუჯეთსაც (ე. ი. გარდა მდ. ალაზნის ველისა, მდ. [[ივრის ზეგანი|ივრის]] შუა და ქვემო დინების ზეგანს), თუმცა წყაროსეული ცნობა უფრო ძველ რეალობას ასახავს და ეფარდება [[გორგასალი|ვახტანგ I გორგასალის]] (V ს.) მიერ შექმნილ ადრინდელი პერიოდის ჰერეთის საერისთავიოს ტერიტორიას. ზოგიერთი წყაროს მიხედვით სახელწოდება "ჰერეთი" აგრეთვე კავკასიის ალბანეთის ტერიტორიასაც აღნიშნავს. [[XV]] ს-დან ტერმინი “ჰერეთი” აღარ იხმარება და მას ენაცვლება ტერმინი “[[კახეთი]]”.
 
-==იხილეთ აგრეთვე =
+==იხილეთ აგრეთვე==
 
 * [[ჰერეთის სამთავრო]]
 * [[ჰერეთის სახელმწიფო]]
