*Empty MediaWiki Message*

--- a/ჰერეთი.mw
+++ b/ჰერეთი.mw
@@ -3,7 +3,7 @@
 ==იხილეთ აგრეთვე==
 
 * [[ჰერეთის სამთავრო]]
-* [[ჰერეთის სახელმწიფო]]
+* [[ჰერეთის სამეფო]]
 
 
 [[კატეგორია:საქართველოს ისტორიულ-გეოგრაფიული მხარეები]]
