*Empty MediaWiki Message*

--- a/რომის_პაპების_სია.mw
+++ b/რომის_პაპების_სია.mw
@@ -105,15 +105,14 @@
 *[[გრიგოლ II]] ([[715]]-[[731]])
 *[[გრიგოლ III]] ([[731]]-[[741]])
 *[[ზაქარია (პაპი)|ზაქარია]] ([[741]]-[[752]])
-*[[სტეფანე II]] ([[752]])
-*[[სტეფანე III]] ([[752]]-[[757]])
+*[[სტეფანე II]] ([[752]]-[[757]])
 *[[პავლე I (პაპი)|პავლე I]] ([[757]]-[[767]])
-*[[სტეფანე IV]] ([[767]]-[[772]])
+*[[სტეფანე III]] ([[767]]-[[772]])
 *[[ჰადრიანე I]] ([[772]]-[[795]])
 *[[ლეო III]] ([[795]]-[[816]])
 
 ==IX საუკუნე==
-*[[სტეფანე V]] ([[816]]-[[817]])
+*[[სტეფანე IV]] ([[816]]-[[817]])
 *[[პასკალ I]] ([[817]]-[[824]])
 *[[ევგენი II]] ([[824]]-[[827]])
 *[[ვალენტინი (პაპი)|ვალენტინი]] ([[827]])
@@ -126,10 +125,10 @@
 *[[იოანე VIII]] ([[872]]-[[882]])
 *[[მარინუს I]] ([[882]]-[[884]])
 *[[ჰადრიანე III]] ([[884]]-[[885]])
-*[[სტეფანე VI]] ([[885]]-[[891]])
+*[[სტეფანე V]] ([[885]]-[[891]])
 *[[ფორმოზი]] ([[891]]-[[896]])
 *[[ბონიფაცე VI]] ([[896]])
-*[[სტეფანე VII]] ([[896]]-[[897]])
+*[[სტეფანე VI]] ([[896]]-[[897]])
 *[[რომანოზი (პაპი)|რომანოზი]] ([[897]])
 *[[თეოდორ II]] ([[897]])
 *[[იოანე IX]] ([[898]]-[[900]])
@@ -143,10 +142,10 @@
 *[[ლანდო (პაპი)|ლანდო]] ([[913]]-[[914]])
 *[[იოანე X]] ([[914]]-[[928]])
 *[[ლეო VI]] ([[928]]-[[929]])
-*[[სტეფანე VIII]] ([[929]]-[[931]])
+*[[სტეფანე VII]] ([[929]]-[[931]])
 *[[იოანე XI]] ([[931]]-[[935]])
 *[[ლეო VII]] ([[936]]-[[939]])
-*[[სტეფანე IX]] ([[939]]-[[942]])
+*[[სტეფანე VIII]] ([[939]]-[[942]])
 *[[მარინუს II]] ([[942]]-[[946]])
 *[[აგაპეტ II]] ([[946]]-[[955]])
 *[[იოანე XII]] ([[955]]-[[963]])
@@ -176,9 +175,9 @@
 *[[დამასე II]] ([[1048]])
 *[[ლეო IX]] ([[1049]]-[[1054]])
 *[[ვიქტორ II]] ([[1055]]-[[1057]])
-*[[სტეფანე X]] ([[1057]]-[[1058]])
+*[[სტეფანე IX]] ([[1057]]-[[1058]])
 *[[ნიკოლოზ II (პაპი)|ნიკოლოზ II]] ([[1058]]-[[1061]])
-*[[ალექსანდრე II (პაპი)|ლექსანდრე II]] ([[1061]]-[[1073]])
+*[[ალექსანდრე II (პაპი)|ალექსანდრე II]] ([[1061]]-[[1073]])
 *[[გრიგოლ VII]] ([[1073]]-[[1085]])
 *[[ვიქტორ III]] ([[1086]]-[[1087]])
 *[[ურბან II]] ([[1088]]-[[1099]])
@@ -321,7 +320,7 @@
 [[es:Papa]]
 [[et:Paavstide loend]]
 [[fi:Luettelo paaveista]]
-[[fr:Liste des papes catholiques]]
+[[fr:Liste détaillée des papes]]
 [[hr:Popis papa]]
 [[hu:Pápa (egyházfő)]]
 [[id:Daftar Paus]]
