*Empty MediaWiki Message*

--- a/ჰერეთის_სამეფო.mw
+++ b/ჰერეთის_სამეფო.mw
@@ -2,12 +2,25 @@
 
 IX-X საუკუნეებში ჰერეთის სამეფოს პოლიტიკურ-ეკონომიური ძლიერება და მაღალი კულტურა დასტურდება ისტორიულ [[ჰერეთი|ჰერეთის]] ტერიტორიაზე არსებული მატერიალური კულტურის ძეგლების სიმრავლით. შემონახულია შესანიშნავი ხუროთმოძღვრული ძეგლები: [[ყუმი|ყუმის]] ბაზილიკა (VIII ს.), [[ლექეთი|ლექეთის]] ტეტრანკონქი (VIII-IX სს.), გურჯაანის ([[კახთუბანი|კახთუბნის]]) "ყველაწმინდა" (VIII-IX სს.), [[ხირსა|ხირსის]] "სტეფანწმინდა" (IX ს.), [[ოზაანი|ოზანიანის]] "ამაღლება" (IX ს.) და მრავალი სხვა.
 
+ჰამამის გარდაცვალების შემდეგ ჰერეთის სამეფო ტახტზე ადის მისი შვილი ადარნასე. ქართული წყაროების მიხედვით ([[მატიანე ქართლისაჲ|"მატიანე ქართლისაჲ"]], [[ვახუშტი ბატონიშვილი]]) [[ადარნასე პატრიკი]]. მის დროს დაახლოებით 915, კახეთის ქორეპისკოპოსმა [[კვირიკე I|კვირიკე I-მა]] (892-918) აფხაზთა მეფე [[კონსტანტინე III|კონსტანტინე III-თან]] ერთად გაილაშქრა ჰერეთის წინააღმდეგ. მოკავშირეებმა დაიპყრეს და გაინაწილეს ჰერეთის მნიშვნელოვანი პუნქტები: [[არიში]] (ახლანდელი მთისძირი), [[გავაზი]] (ახლანდელი ახალსოფელი), [[ორჭობი]]. რამდენიმე ხნის შემდეგ ადარნასე პატრიკმა ისარგებლა კახეთის სამთავროს საგარეო პოლიტიკური მდგომარეობის გართულებით და დაკარგული ტერიტორიათა დაიბრუნა.
+
+
+ადარნასე პატრიკის შემდეგ ჰერეთის მეფე იყო მისი ძე [[იშხანიკი]] (დაახლოებით 943-X საუკუნის 60-იანი წლები). მასთან ერთად ჰერეთს მართავდა დედამისი - [[დინარ დედოფალი]] ([[ტაო-კლარჯეთი|ტაო-კლარჯეთის]] ბაგრატიონთა სახლის წარმომადგენელი, [[ადარნასე II|ადარნასე II-ის]] ასული და ცნობილი [[გურგენ IV]] დიდის, ერისთავთერისთავის, მაგისტროსის და). 
+
+[[იბნ ჰაუკალი|იბნ ჰაუკალის]] თხზულების მიხედვით, იშხანიკის მეფობის დროს ჰერეთი დეილამის მთავრობის - სალარიდების სახელმწიფოს ვასალი იყო. X საუკუნის 50-იან წლებში იშხანიკმა ისარგებლა სალარიდების სახელმწიფოში შინაფეოდალური ომებით და ხარკის მიცემა შეწყვიტა. ქართული წყაროების მიხედვით, იშხანიკისა და დინარ დედოფლის მმართველოს ხანაში ჰერეთმა უარყო მონოფიზიტობა და აღიარა ქალკედონული მრწამსი. ამ დიდმნიშვნელოვანი კულტურულ-ისტორიული აქტით განხორციელდა ჰერთა საბოლოო გაერთიანება ერთიან ქართულ (მცხეთის) ეკლესიასთან. 
+
+იშხანიკის შემდეგ მეფობდა [[იოანე სენექერიმი]] (დაახლოებით X საუკუნის დასასრული). ალბანეთისა და კახეთის სამეფოს ხარჯზე, რის გამოც წინართა მეფის ტიტულიც მიიღო. XI საუკუნის დასაწყისიდან საისტორიო წყაროებში ჰერეთის მეფე აღარ იხსენიება. როგორც ჩანს, ამ დროს არსებობა შეწყვიტა ჰერეთის მფლობელთა დინასტიამ.
+
+XI საუკუნის დასაწყისში გაერთიანებული საქართველოს მეფე [[ბაგრატ III]] და კახთა ქორეპისკოპოსი [[დავითი]] (976-1010) იბრძვიან ჰერეთის დასაპყრობად. XI საუკუნის ოციან წლებში კახეთის მეფე [[კვირიკე III]] (1010-1037) დიდმა დაიპყრო ჰერეთი სამეფო რითაც დასრულდა კახეთ-ჰერეთის პოლიტიკური შერქყმის პროცესი. ამიერიდან ჰერეთის სამეფომ შეწყვიტა დამოუკიდებელი არსებობა და მოექცა ახლად შექმნილი პოლიტიკური ერთეულის - "რანთა და კახთა" სამეფოს შემადგენლობაში. 
+
+XII საუკუნის  დასაწყისში ჰერეთი კახეთის სამეფოსთან ერთად გახდა გაერთიანებული საქართველოს ორგანული და განუყოფელი ნაწილი, რომელიც აქტიურად მონაწილეობდა ქვეყნის სოციალურ-ეკონომიკურ პოლიტიკურ და კულტურულ ცხოვრებაში.
+
 
 ==იხილეთ აგრეთვე==
 
 *[[ჰერეთი]]
 *[[ჰერეთის სამთავრო]]
 
-{{ესკიზი}}
+
 
 [[კატეგორია:საქართველოს სამეფო-სამთავროები]]
