*Empty MediaWiki Message*

--- a/ჰერეთის_სამთავრო.mw
+++ b/ჰერეთის_სამთავრო.mw
@@ -1,6 +1,16 @@
-{{ესკიზი}}
+'''ჰერეთის სამთავრო''' - ფეოდალური ხანის პოლიტიკური ერთეული [[საქართველო|საქართველოში]], რომელიც VIII საუკუნის II ნახევარში გამოეყო ქართლის საერისმთავროს. ჰერეთის დამოუკიდებელი ფეოდალური სამტავროს შექმნა განაპირობა ქართლის საერისმთავროს სოვიალური-ეკონომიკური განვიტარების მაღალმა დონემ და ფეოდალური ურთიერთობის შემდგომმა გაღრმავებამ. სამთავროს ჩამოყალიბების პროცესი მიმდინარეობდა VIII საუკუნის I ნახევარში არაბი დამპყრობლების წინააღმდეგ ქართლის საერისმთავროს შეუპოვარი ბრძოლის პირობებში. VIII საუკუნის 40-50-იან წლებში ქართლის ერისმთავრის არჩილის შემწეობითა და ნებართვით ჰერეთში დამკვიდრდნენ ბაგრატიონთა საგვარეულოს ერთ-ერთი შტოს წარმომადგენლები. ქართლის უკანასკნელი ერისმთავრების იოანესა და ჯუანშერის გარდაცვალების შემდეგ ამ ბაგრატიონებმა დაიპყრეს მთელი ჰერეთი შაკიხიდან (ე. ი. შაქიდან) გულგულამდე (დაახლოებით თელავამდე) და საფუძველი ჩაუყარეს ჰერეთის ფეოდალურ სამთავროს. 
+
+ვახუშტი ბატონიშვილის ცნობით, ეს მოხდა 787. ახლადშექმნილი ჰერეთის სამთავროს ტერიტორია მოიცავდა გაღმამხარს, საინგილოს, შიგნიკახეთს, კამბეჩანსა და შაქს. ჰერეთის მთავარს ემორჩილებოდა აგრეთვე დაღესტნის მთიანეთის ნაწილი: ხუნძარი და დიდოეთი. პოლიტიკური-ადმინისტრაციული ცენტრი იყო ქ. შაქი.
 
 
-'''ჰერეთის სამთავრო''' - ფეოდალური პოლიტიკური ერთეული [[საქართველო|საქართველოში]], შეიქმნა [[IX საუკუნე|IX საუკუნის]] დასაწყისში აღმოსავლეთ საქართველოში. მისი დედაქალაქი [[გიში]] იყო. [[893]] წელს ჰერეთის მთავრებმა მეფის ტიტული მიიღეს. ჰერეთის სამთავრომ იარსება [[959]] წლამდე, როდესაც ის [[კახეთის სამთავრო|კახეთის სამთავრომ]] შეიერთა.
+განსაკუტრებით ძლიერი იყო ჰერეთის სამთავრო IX საუკუნის უკანასკნელ მეოთხედში. ამ ხანაში ჰერეთის მთავარმა ჰამამმა 893 წელს მეფის ტიტული მიიღო. ასე შეიქმნა ჰერეთის სამეფო.
+
+
+
+
+==იხილეთ აგრეთვე==
+
+* [[ჰერეთი]]
+* [[ჰერეთის სამეფო]]
 
 [[კატეგორია:საქართველოს სამეფო-სამთავროები]]
