*Empty MediaWiki Message*

--- a/ჰერეთის_სამთავრო.mw
+++ b/ჰერეთის_სამთავრო.mw
@@ -1,9 +1,9 @@
-'''ჰერეთის სამთავრო''' - ფეოდალური ხანის პოლიტიკური ერთეული [[საქართველო|საქართველოში]], რომელიც VIII საუკუნის II ნახევარში გამოეყო ქართლის საერისმთავროს. ჰერეთის დამოუკიდებელი ფეოდალური სამტავროს შექმნა განაპირობა ქართლის საერისმთავროს სოვიალური-ეკონომიკური განვიტარების მაღალმა დონემ და ფეოდალური ურთიერთობის შემდგომმა გაღრმავებამ. სამთავროს ჩამოყალიბების პროცესი მიმდინარეობდა VIII საუკუნის I ნახევარში არაბი დამპყრობლების წინააღმდეგ ქართლის საერისმთავროს შეუპოვარი ბრძოლის პირობებში. VIII საუკუნის 40-50-იან წლებში ქართლის ერისმთავრის არჩილის შემწეობითა და ნებართვით ჰერეთში დამკვიდრდნენ ბაგრატიონთა საგვარეულოს ერთ-ერთი შტოს წარმომადგენლები. ქართლის უკანასკნელი ერისმთავრების იოანესა და ჯუანშერის გარდაცვალების შემდეგ ამ ბაგრატიონებმა დაიპყრეს მთელი ჰერეთი შაკიხიდან (ე. ი. შაქიდან) გულგულამდე (დაახლოებით თელავამდე) და საფუძველი ჩაუყარეს ჰერეთის ფეოდალურ სამთავროს. 
+'''ჰერეთის სამთავრო''' - ფეოდალური ხანის პოლიტიკური ერთეული [[საქართველო|საქართველოში]], რომელიც VIII საუკუნის II ნახევარში გამოეყო [[ქართლის საერისმთავრო|ქართლის საერისმთავროს]]. ჰერეთის დამოუკიდებელი ფეოდალური სამთავროს შექმნა განაპირობა ქართლის საერისმთავროს სოციალური-ეკონომიკური განვითარების მაღალმა დონემ და ფეოდალური ურთიერთობის შემდგომმა გაღრმავებამ. სამთავროს ჩამოყალიბების პროცესი მიმდინარეობდა VIII საუკუნის I ნახევარში არაბი დამპყრობლების წინააღმდეგ ქართლის საერისმთავროს შეუპოვარი ბრძოლის პირობებში. VIII საუკუნის 40-50-იან წლებში ქართლის ერისმთავრის [[არჩილ სტეფანოზის ძე|არჩილის]] შემწეობითა და ნებართვით ჰერეთში დამკვიდრდნენ [[ბაგრატიონები|ბაგრატიონთა]] საგვარეულოს ერთ-ერთი შტოს წარმომადგენლები. ქართლის უკანასკნელი ერისმთავრების [[იოანე|იოანესა]] და [[ჯუანშერი (ერისთავი)|ჯუანშერის]] გარდაცვალების შემდეგ ამ ბაგრატიონებმა დაიპყრეს მთელი ჰერეთი შაკიხიდან (ე. ი. შაქიდან) გულგულამდე (დაახლოებით თელავამდე) და საფუძველი ჩაუყარეს ჰერეთის ფეოდალურ სამთავროს. 
 
-ვახუშტი ბატონიშვილის ცნობით, ეს მოხდა 787. ახლადშექმნილი ჰერეთის სამთავროს ტერიტორია მოიცავდა გაღმამხარს, საინგილოს, შიგნიკახეთს, კამბეჩანსა და შაქს. ჰერეთის მთავარს ემორჩილებოდა აგრეთვე დაღესტნის მთიანეთის ნაწილი: ხუნძარი და დიდოეთი. პოლიტიკური-ადმინისტრაციული ცენტრი იყო ქ. შაქი.
+[[ვახუშტი ბატონიშვილი|ვახუშტი ბატონიშვილის]] ცნობით, ეს მოხდა [[787]]. ახლადშექმნილი ჰერეთის სამთავროს ტერიტორია მოიცავდა [[გაღმამხარი (კახეთი)|გაღმამხარს]], [[საინგილო|საინგილოს]], [[შიგნიკახეთი|შიგნიკახეთს]], [[კამბეჩანი|კამბეჩანსა]] და [[შაქი|შაქს]]. ჰერეთის მთავარს ემორჩილებოდა აგრეთვე [[დაღესტანი|დაღესტნის]] მთიანეთის ნაწილი: [[ხუნძარი]] და [[დიდოეთი]]. პოლიტიკური-ადმინისტრაციული ცენტრი იყო ქ. შაქი.
 
 
-განსაკუტრებით ძლიერი იყო ჰერეთის სამთავრო IX საუკუნის უკანასკნელ მეოთხედში. ამ ხანაში ჰერეთის მთავარმა ჰამამმა 893 წელს მეფის ტიტული მიიღო. ასე შეიქმნა ჰერეთის სამეფო.
+განსაკუთრებით ძლიერი იყო ჰერეთის სამთავრო IX საუკუნის უკანასკნელ მეოთხედში. ამ ხანაში ჰერეთის მთავარმა ჰამამმა [[893]] წელს მეფის ტიტული მიიღო. ასე შეიქმნა [[ჰერეთის სამეფო]].
 
 
 
