--- a/ლატვია.mw
+++ b/ლატვია.mw
@@ -31,9 +31,8 @@
 ==სახელწოდება==
  
 * '''ოფიციალური''': ლატვიის რესპუბლიკა. 
-* '''ეროვნული''': Latvija; Latvijas Respublika. 
-* '''ეტიმოლოგია:''' სავარაუდოდ თანამადროვე ლატვიელების წინაპრები ცხოვრობდნენ მდინარე ლატას თუ ლეტას ნაპირებზე. მე-19 საუკუნემდე იგი სხვადასხვაგვარად იწოდებოდა: Lettland, Lotygola, Leththia, Lothwa. 
-
+* '''ეროვნული''': Latvija; Latvijas Republika. 
+* '''ეტიმოლოგია:''' სავარაუდოდ თანამადროვე ლატვიელების წინაპრები ცხოვრობდნენ მდინარე ლატას თუ ლეტას ნაპირებზე. მე-19 საუკუნემდე იგი სხვადასხვაგვარად იწოდებოდა: Lettland, Lotygola, Leththia, Lothwa.
 
 ==გეოგრაფია==
 
