*Empty MediaWiki Message*

--- a/კახეთის_სამთავრო.mw
+++ b/კახეთის_სამთავრო.mw
@@ -1,6 +1,11 @@
-{{ესკიზი}}
+'''კახეთის სამთავრო''' - ფეოდალური პოლიტიკური ერთეული [[საქართველო|საქართველოში]], ჩამოყალიბდა [[VIII საუკუნე|VIII საუკუნის]] მე-2 ნახევარში. [[ვახუშტი ბატონიშვილი|ვახუშტი ბატონიშვილის]] ცნობით [[787]] წელს იგი გამოეყო ქართლის საერისმთავროს. კახეთის სამთავროს გამოყოფა გაპირობებული იყო ქართლის საერისმტავროს ეკონომიკური აღმავლობის შედეგად ფეოდალური ურთიერთობის შემდგომი გაღრმავებით და ამის ნიადაგზე სეპარატული ტენდენციების განვითარებით. ეს პროცესი, რომლის საწყისები ჯერ კიდევ VI საუკუნიდან შეიმჩნევა, VII-VIII საუკუნეებში მიმდინარეობდა არაბთა წინაღმდეგ ქართლის საერისმთავროს ბრძოლის პარალელურად და მასთან კავშირში. კერძოდ, ქართლის (პოლიტიკური მნიშვნელობით) ერთ-ერთ აღმოსავლეთ პროვინციაში, კახეთში, ამ ბრძოლას თაოსნობდა წანართა ტომი, რომელიც ამ დროისათვის კახეთში პოლიტიკური ჰეგემონის როლს ტამაშობდა. სწორედ წანარ წარჩინებულთა ირგვლივ გაერთიანდნენ კახეთის სხვადასხვა თემები და შესაძლებელია ამ წარჩინებულთა წარმომადგენელი იყო კახეთის მთავარი [[გრიგოლი (VIII ს.)|გრიგოლიც]]. 
 
 
-'''კახეთის სამთავრო''' - ფეოდალური პოლიტიკური ერთეული [[საქართველო|საქართველოში]], ჩამოყალიბდა [[VIII საუკუნე|VIII საუკუნის]] მე-2 ნახევარში. თავიდან მისი დედაქალაქი [[უჯარმა]] იყო, შემდეგ - [[თიანეთი]]. [[959]] წელს კახეთის მთავარმა [[კვირიკე II]]-მ შეიერთა ჰერეთი და დედაქალაქი [[თელავი|თელავში]] გადაიტანა. კახეთის მთავრები დონაურთა საგვარეულოდან იყვნენ და ქორეპისკოპოსების (ქორიკოზების), ხოლო [[1014]] წლიდან [[კახეთ-ჰერეთის სამეფო|კახეთ-ჰერეთის]] მეფის ტიტულს ატარებდნენ. 
+კახეთის სამთავროს ჩამოყალიბება ტერიტორიის ექსპანსიით აღინიშნა, როგორც დასავლეთით, ქართლისაკენ (სადაც საზღვარი IX საუკუნის დასაწყისში აშოტ კურაპალატთან ბრძოლის შედეგად [[ქსანი|მდ. ქსანზე]] დაიდო), ისე აღმოსავლეთით, ჰერეთისაკენ (რომელტანაც მიჯნა დაახლოებით ყვარელ-გურჯაანის ხაზზე გადიოდა, [[ალაზნის ველი|ალაზნის ველზე]] და გარეჯის უდაბნოს აღმოსავლეთით, ივრის ზეგანზე). ჩრდილოეთით კახეთის სამთავროს კავკასიონის ქედი ესაზღვრებოდა (ზოგან საზღვარი ქედს გადაღმაც გადიოდა), ისე რომ ხევი, თუშ-ფშავ-ხევსურეთი და ქისტეთის სამხრეთი მთიანეთი (ძურძუკ-ღლიღვები) კახეთის სამთავროს ფარგლებში შევიდა. კახეთის სამთავრო სამხრეთითაც გაფართოვდა და ძველი ქართული პროვინცია გარდანბანი X საუკუნის შუა წლებამდე მის შემადგენლობაში ითვლებოდა. VIII-IX საუკუნეებში კახეთის სამთავროს ცენტრი უჯარმა იყო, X საუკუნეში - ბოჭორმა, შემდეგ თიანეთი.
+
+კახეთის მთავარი [[ქორეპისკოპოსი|ქორეპისკოპოსის]] ტიტულს ატარებდა. ვარაუდობენ, რომ IX საუკუნის დასაწყისში სამთავროში გადატრიალება მოხდა და ტახტს გარდაბნელთა დინასტიის წარმომადგენლები დაეუფლნენ. საუკუნის ბოლოს გარდაბნელები არევმანელებმა შეცვალეს. შინაგან მმართველობას მთავრები ერისთავების საშუალებით ახორციელებდნენ. ვახუშტი ბატონიშვილი ასახელებს კახეთის 3 დიდმოხელეს: რუსთავის, კვეტერის და პანკისის ერისთავებს. კახელ მთავართა საგარეო პოლიტიკა პირველ რიგში მიმართული იყო არაბთა ცენტრალური ხელისუფლების ადგილობრივი წარმომადგენლების წინააღმდეგ ბრძოლისაკენ. 
+
+[[840]]-[[841]] წლებში სოფ. გავაზთან კახელებმა დაამარცხა არაბი სარდლის ხალიდ იაზიდის ძის ლაშქარი. ხალიფის წარმომადგენლებთან ბრძოლაში კახელები უკავშირდებოდნენ თბილისის ამირებს, რომლებიც აგრეთვე ებრძოდნენ ცენტრალურ ხელისუფლებას. მაგ., ბუღა თურქის დამარბეველი ლაშქრობისას ([[853]]) კახელები თბილისის ამირას მომხრედ გამოვიდნენ, [[941]] ებრძოდნენ არაბ სარდალს [[აბუ ლ-კასიმი|აბუ ლ-კასიმს]]. გარდა ამისა, კახეთის მთავრები აქტიურად მონაწილეობდნენ საქართველოს გაერთიანებისათვის ბრძოლაში - იბრძოდნენ ჰერეთის სამეფოს შემოერთებისათვის "აფხაზთა" მეფესთან ერთად. ასევე შიდა ქართლის დაუფლებისათვის.  [[959]] წელს კახეთის მთავარმა [[კვირიკე III|კვირიკე III-მ]] შეიერთა [[ჰერეთის სამეფო]] და დედაქალაქი [[თელავი|თელავში]] გადაიტანა. კახეთის მთავრები დონაურთა საგვარეულოდან იყვნენ და ქორეპისკოპოსების (ქორიკოზების), ხოლო [[1014]] წლიდან [[კახეთ-ჰერეთის სამეფო|კახეთ-ჰერეთის]] მეფის ტიტულს ატარებდნენ. ასე წარმოიქმნა [[კახეთის სამეფო]].
+
 
 [[კატეგორია:საქართველოს სამეფო-სამთავროები]]
