*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -9,3 +9,32 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[bg:Консул]]
+[[bs:Konzul]]
+[[cs:Konzul (antický Řím)]]
+[[da:Consul]]
+[[de:Consulat]]
+[[et:Konsul (Vana-Rooma)]]
+[[en:Consul]]
+[[es:Cónsul romano]]
+[[eo:Konsulo (Romia historio)]]
+[[fr:Consul]]
+[[ko:집정관]]
+[[hr:Konzul]]
+[[it:Console (storia romana)]]
+[[he:קונסול (רומא העתיקה)]]
+[[la:Consul]]
+[[lt:Konsulas]]
+[[hu:Consul]]
+[[nl:Consul (Rome)]]
+[[ja:執政官]]
+[[no:Romersk konsul]]
+[[nn:Romersk konsul]]
+[[pl:Konsul rzymski]]
+[[pt:Cônsul]]
+[[ro:Consul]]
+[[ru:Консул (Древний Рим)]]
+[[fi:Konsuli]]
+[[sv:Konsul (Rom)]]
+[[zh:執政官]]
