--- a/კონსული.mw
+++ b/კონსული.mw
@@ -3,7 +3,7 @@
 {{რომის მთავრობა}}
 ლათინურად კონსული ნიშნავს "ვინც ერთად ლაპარაკობს.
 
-კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა [[ცენტურიების ცენტურიების კომიცია|კომიციაზე]]. კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს.
+კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა [[კომიცია|ცენტურიების კომიციაზე]]. კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს.
 
 თავდაპირველად კონსულად მხოლოდ პატრიციუსი შეიძლებოდა არჩეულიყო, ხოლო [[ძვ. წ. 367]] წლიდან პლებეებსაც შეეძლოთ კონსულობა. პატრიციუსი კონსულად ასარჩევად მინიმუმ 40 წლის უნდა ყოფილიყო, ხოლო პლებეი 42 წლის.
 
