*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -7,7 +7,9 @@
 
 თავდაპირველად კონსულად მხოლოდ პატრიციუსი შეიძლებოდა არჩეულიყო, ხოლო [[ძვ. წ. 367]] წლიდან პლებეებსაც შეეძლოთ კონსულობა. პატრიციუსი კონსულად ასარჩევად მინიმუმ 40 წლის უნდა ყოფილიყო, ხოლო პლებეი 42 წლის.
 
-კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად.
+კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად. კონსულების თანაშემწეები [[კვესტორი|კვესტორები იყვნენ]].
+
+კონსულის ძალაუფლების სიმბოლო იყო [[ტოგა]] განიერი მეწამული კანტით, მეწამული ფერის სპილოსძლით მოჭედილი სავარძელი (Sella curulis) და თითო კონსულს თან 12 [[ლიქტორი]] ახლდა
 
 {{ესკიზი}}
 
