--- a/კონსული.mw
+++ b/კონსული.mw
@@ -9,7 +9,7 @@
 
 კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად. კონსულების თანაშემწეები [[კვესტორი|კვესტორები იყვნენ]].
 
-[[სურათი:Sellacurulis.jpg|thumb|right|Sella curulis]]
+[[სურათი:Sellacurulis.jpg|thumb|left|Sella curulis]]
 კონსულის ძალაუფლების სიმბოლო იყო [[ტოგა]] განიერი მეწამული კანტით, მეწამული ფერის სპილოსძლით მოჭედილი სავარძელი (Sella curulis) და თითო კონსულს თან 12 [[ლიქტორი]] ახლდა
 
 
