*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -3,16 +3,22 @@
 {{რომის მთავრობა}}
 ლათინურად კონსული ნიშნავს "ვინც ერთად ლაპარაკობს.
 
-კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა [[კომიცია|ცენტურიების კომიციაზე]]. კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს.
+კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა [[კომიცია|ცენტურიების კომიციაზე]].
+
+კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს. ასე არჩეულ კონსულს '''suffect consul''' ეწოდებოდა.
 
 თავდაპირველად კონსულად მხოლოდ პატრიციუსი შეიძლებოდა არჩეულიყო, ხოლო [[ძვ. წ. 367]] წლიდან პლებეებსაც შეეძლოთ კონსულობა. პატრიციუსი კონსულად ასარჩევად მინიმუმ 40 წლის უნდა ყოფილიყო, ხოლო პლებეი 42 წლის.
 
 კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად. კონსულების თანაშემწეები [[კვესტორი|კვესტორები იყვნენ]].
 
 [[სურათი:Sellacurulis.jpg|thumb|left|Sella curulis]]
-კონსულის ძალაუფლების სიმბოლო იყო [[ტოგა]] განიერი მეწამული კანტით, მეწამული ფერის სპილოსძლით მოჭედილი სავარძელი (Sella curulis) და თითო კონსულს თან 12 [[ლიქტორი]] ახლდა
+კონსულის ძალაუფლების სიმბოლო იყო [[ტოგა]] განიერი მეწამული კანტით, მეწამული ფერის სპილოსძლით მოჭედილი სავარძელი ('''Sella curulis''') და თითო კონსულს თან 12 [[ლიქტორი]] ახლდა [[ფასცები|ფასცებით]] რომლებშიც ქალაქიდან გასვლისას იდებოდა ნაჯახები.
 
+რესპუბლიკის პერიოდში წელთაღრიცხვა წარმოებდა კონსულების მიხედვით, ანუ წლებს კონსულების სახელები ერქვა ('''consules ordinarii'''). 
 
+გვიან რესპუბლიკის პერიოდში ყოფილი კონსული როგორც წესი ინიშნებოდა პროვინციის მმართველად - [[პროკონსული|პროკონსულად]].
+
+ 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
