*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -18,7 +18,12 @@
 
 გვიან რესპუბლიკის პერიოდში ყოფილი კონსული როგორც წესი ინიშნებოდა პროვინციის მმართველად - [[პროკონსული|პროკონსულად]].
 
- 
+იმპერიის ჩამოყალიბების შემდეგ კონსულებმა რეალური ძალაუფლება დაკარგეს, ხოლო მოგვიანებით ეს თანამდებობა არჩევითისგან იქცა დანიშვნადათ. [[კონსტანტინოპოლი|კონსტანტინოპოლის დაარსების შემდეგ ერთი კონსული რომში იყო მეორე კი კონსტანტინოპოლში. კონსულობის ინსტიტუტი საბოლოოდ მოიშალას უკვე [[რომის იმპერია|რომის იმპერიის]] დაცემის შემდეგ, ბიზაინტიის იმპერიაში [[541]] წელს.
+
+==ასევე იხილეთ==
+
+[[რომის კონსულთა სია]]
+
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
