*Empty MediaWiki Message*

--- a/ედილი.mw
+++ b/ედილი.mw
@@ -1,1 +1,7 @@
+{{რომის მთავრობა}}
 '''ედილუსი''' (''[[ლათინური ენა|ლათ]]. Aedilis, aedis ნიშნავს ტაძარს'') [[რომის რესპუბლიკა|რომში]] თანამდებობა.
+
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
