*Empty MediaWiki Message*

--- a/ედილი.mw
+++ b/ედილი.mw
@@ -1,7 +1,7 @@
 {{რომის მთავრობა}}
 '''ედილუსი''' (''[[ლათინური ენა|ლათ]]. Aedilis, aedis ნიშნავს ტაძარს'') [[რომის რესპუბლიკა|რომში]] თანამდებობა. ედილუსები იყვნენ საზოგადოებრივ შენობების მოვლაპატრონობაზე პასუხისმგებელნი. ასევე მათ ევალებოდათ რელიგიური დღესასწაულების და თამაშობების ჩატარება.
 
-ედილების ინსტიტუტი [[ძვ. წ. 494]] წელს დაარსდა, თავდაპირველად ეს პლებეური მაგისტრატურა იყო, ედილები [[ტრიბუნი|ტრიბუნების]] თანაშემწეები იყვნენ. მოგვიანებით 
+ედილების ინსტიტუტი [[ძვ. წ. 494]] წელს დაარსდა, თავდაპირველად ეს პლებეური მაგისტრატურა იყო, ედილები [[ტრიბუნი|ტრიბუნების]] თანაშემწეები იყვნენ. მოგვიანებით პატრიციებიც გახდნენ ედილები (aediles curules). 
 
 
 
