*Empty MediaWiki Message*

--- a/ედილი.mw
+++ b/ედილი.mw
@@ -3,7 +3,9 @@
 
 ედილების ინსტიტუტი [[ძვ. წ. 494]] წელს დაარსდა, თავდაპირველად ეს პლებეური მაგისტრატურა იყო, ედილები [[ტრიბუნი|ტრიბუნების]] თანაშემწეები იყვნენ. მოგვიანებით პატრიციებიც გახდნენ ედილები (aediles curules). 
 
+პატრიციუს ედილებ საკუთარი ხარჯებით უნდა მოეწყოთ თამაშობები. ამ თანამდებობას ბევრი დამწყები პოლიკიტოსი იყენებდა პოპულარობისთვის. პლებეი ედილები აწყობდნენ პლებეურ თამაშობებს. [[ციცერონი]] აღნიშნავს რომ ედილების მოვალეობებში ზემოთხსენებულის გარდა შედიოდა ქალაქში სისუფთავის დაცვა, აკვედუკების და საკანალიზაციო სისტემების მომსახურება, ქალაქში მოძრაობის რეგულაცია და ავარიული შენობების შეკეთება/დანგრევა, ხანძრების საწინააღმდეგო ზომების მიღება, აბანოებისა და ტავერნების შენახვა, აფერისტების და თაღლითების დასჯა, და საერთოდ, მოსახლეობის მორალზე ზრუნვა. ისინი ასევე თვაყურს ადევნებდნენ პროვიზიის ხარისხს.
 
+[[იულიუს კეისარი|იულიუს კეისარმა]] ორი პატრიციუსი ედილი დაამატა, რომლების ხორბლის იმპორტს ზედამხედველობდნენ. [[ოქტავიან ავგუსტუსი|ავგუსტუსის]] დროს ედილთა ფუნქციები გადანაწილდა [[პრეტორი|პრეტორებდა]] და [[პრეფექტი|პრეფექტებს]] შორის, ხოლო [[III საუკუნე|III საუკუნეში]] ედილთა ინსტიტუტი გაქრა.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
