*Empty MediaWiki Message*

--- a/ედილი.mw
+++ b/ედილი.mw
@@ -9,3 +9,17 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[bg:Едил]]
+[[es:Edil romano]]
+[[fr:Édile]]
+[[hr:Edil]]
+[[it:Edile (storia romana)]]
+[[he:אידיל]]
+[[hu:Aedilis]]
+[[nl:Aedilis]]
+[[pt:Edil]]
+[[ro:Edil]]
+[[ru:Эдил]]
+[[fi:Ediili]]
+[[zh:市政官]]
