*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -1,8 +1,8 @@
 {{რომის მთავრობა}}
-'''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')
 
 
 
+{{ესკიზი}}
 
 
 
