*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -1,5 +1,5 @@
 {{რომის მთავრობა}}
-'''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')
+'''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')  [[რომის რესპუბლიკა|რომაული]] ერთერთი [[მაგისტრატურა]].
 
 
 
