*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -1,6 +1,7 @@
 {{რომის მთავრობა}}
 '''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')  [[რომის რესპუბლიკა|რომაული]] ერთერთი [[მაგისტრატურა]].
 
+თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა. 
 
 
 [[კატეგორია:ძველი რომი]]
