*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -1,7 +1,9 @@
 {{რომის მთავრობა}}
 '''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')  [[რომის რესპუბლიკა|რომაული]] ერთერთი [[მაგისტრატურა]].
 
-თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა. 
+თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა.
+
+[[ძვ. წ. 367]] წლამდე, სანამ სისხლის სამართლის საქმეების განხილვა კონსულების კომპეტენციაში შედიოდა, კვესტორები მხოლოდ საქმის წინასწარ გამოძიებას აწარმოებდნენ, ხოლო შემდეგ 
 
 
 [[კატეგორია:ძველი რომი]]
