*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -9,7 +9,7 @@
 
 თავდაპირველად კონსულად მხოლოდ პატრიციუსი შეიძლებოდა არჩეულიყო, ხოლო [[ძვ. წ. 367]] წლიდან პლებეებსაც შეეძლოთ კონსულობა. პატრიციუსი კონსულად ასარჩევად მინიმუმ 40 წლის უნდა ყოფილიყო, ხოლო პლებეი 42 წლის.
 
-კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად. კონსულების თანაშემწეები [[კვესტორი|კვესტორები იყვნენ]].
+კონსულები წარმოადგენდნენ უმაღლეს აღმასრულებელ ხელისუფლებას, მათ შეეძლოთ ლეგიონების შეგროვება და მხედართმთავრობა, სენატის და კომიციების სხდომების გამართვა, ძვ. წ. 367 წლამდე კონსულები სასამართლო პროცესებსაც უძღვებოდნენ, ხოლო შემდეგ ეს ფუნქცია [[პრეტორი|პრეტორებს]] დაეკისრად. კონსულების თანაშემწეები [[კვესტორი|კვესტორები]] იყვნენ.
 
 [[სურათი:Sellacurulis.jpg|thumb|left|Sella curulis]]
 კონსულის ძალაუფლების სიმბოლო იყო [[ტოგა]] განიერი მეწამული კანტით, მეწამული ფერის სპილოსძლით მოჭედილი სავარძელი ('''Sella curulis''') და თითო კონსულს თან 12 [[ლიქტორი]] ახლდა [[ფასცები|ფასცებით]] რომლებშიც ქალაქიდან გასვლისას იდებოდა ნაჯახები.
@@ -18,7 +18,7 @@
 
 გვიან რესპუბლიკის პერიოდში ყოფილი კონსული როგორც წესი ინიშნებოდა პროვინციის მმართველად - [[პროკონსული|პროკონსულად]].
 
-იმპერიის ჩამოყალიბების შემდეგ კონსულებმა რეალური ძალაუფლება დაკარგეს, ხოლო მოგვიანებით ეს თანამდებობა არჩევითისგან იქცა დანიშვნადათ. [[კონსტანტინოპოლი|კონსტანტინოპოლის დაარსების შემდეგ ერთი კონსული რომში იყო მეორე კი კონსტანტინოპოლში. კონსულობის ინსტიტუტი საბოლოოდ მოიშალას უკვე [[რომის იმპერია|რომის იმპერიის]] დაცემის შემდეგ, ბიზაინტიის იმპერიაში [[541]] წელს.
+იმპერიის ჩამოყალიბების შემდეგ კონსულებმა რეალური ძალაუფლება დაკარგეს, ხოლო მოგვიანებით ეს თანამდებობა არჩევითისგან იქცა დანიშვნადათ. [[კონსტანტინოპოლი|კონსტანტინოპოლის]] დაარსების შემდეგ ერთი კონსული რომში იყო მეორე კი კონსტანტინოპოლში. კონსულობის ინსტიტუტი საბოლოოდ მოიშალას უკვე [[რომის იმპერია|რომის იმპერიის]] დაცემის შემდეგ, ბიზაინტიის იმპერიაში [[541]] წელს.
 
 ==ასევე იხილეთ==
 
