--- a/ედილი.mw
+++ b/ედილი.mw
@@ -1,7 +1,7 @@
 {{რომის მთავრობა}}
 '''ედილუსი''' (''[[ლათინური ენა|ლათ]]. Aedilis, aedis ნიშნავს ტაძარს'') [[რომის რესპუბლიკა|რომში]] თანამდებობა. ედილუსები იყვნენ საზოგადოებრივ შენობების მოვლაპატრონობაზე პასუხისმგებელნი. ასევე მათ ევალებოდათ რელიგიური დღესასწაულების და თამაშობების ჩატარება.
 
-ედილების ინსტიტუტი [[ძვ. წ. 494]] წელს დაარსდა, თავდაპირველად ეს პლებეური მაგისტრატურა იყო, ედილები [[ტრიბუნი|ტრიბუნების]] თანაშემწეები იყვნენ. მოგვიანებით პატრიციებიც გახდნენ ედილები (aediles curules). 
+ედილების ინსტიტუტი [[ძვ. წ. 494]] წელს დაარსდა, თავდაპირველად ეს პლებეური მაგისტრატურა იყო, ედილები [[ტრიბუნი|ტრიბუნების]] თანაშემწეები იყვნენ. მოგვიანებით პატრიციებიც გახდნენ ედილები (aediles curules). ედილუსი 36 წელზე უფროსი უნდა ყოფილიყო.
 
 პატრიციუს ედილებ საკუთარი ხარჯებით უნდა მოეწყოთ თამაშობები. ამ თანამდებობას ბევრი დამწყები პოლიკიტოსი იყენებდა პოპულარობისთვის. პლებეი ედილები აწყობდნენ პლებეურ თამაშობებს. [[ციცერონი]] აღნიშნავს რომ ედილების მოვალეობებში ზემოთხსენებულის გარდა შედიოდა ქალაქში სისუფთავის დაცვა, აკვედუკების და საკანალიზაციო სისტემების მომსახურება, ქალაქში მოძრაობის რეგულაცია და ავარიული შენობების შეკეთება/დანგრევა, ხანძრების საწინააღმდეგო ზომების მიღება, აბანოებისა და ტავერნების შენახვა, აფერისტების და თაღლითების დასჯა, და საერთოდ, მოსახლეობის მორალზე ზრუნვა. ისინი ასევე თვაყურს ადევნებდნენ პროვიზიის ხარისხს.
 
