*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -3,7 +3,7 @@
 
 თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა.
 
-[[ძვ. წ. 367]] წლამდე, სანამ სისხლის სამართლის საქმეების განხილვა კონსულების კომპეტენციაში შედიოდა, კვესტორები მხოლოდ საქმის წინასწარ გამოძიებას აწარმოებდნენ, ხოლო შემდეგ 
+[[ძვ. წ. 367]] წლამდე, სანამ სისხლის სამართლის საქმეების განხილვა კონსულების კომპეტენციაში შედიოდა, კვესტორები მხოლოდ საქმის წინასწარ გამოძიებას აწარმოებდნენ, ხოლო შემდეგ, როდესაც ეს მოვალეობა პრეტორებს დაეკისრათ, კვესტორების ფუნქცია ხაზინის ზედამხედველობით და არქივების მართვით შემოიფარგლა. 
 
 
 [[კატეგორია:ძველი რომი]]
